--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -39,7 +39,7 @@
       </form>
 
       <form action="index.html" method="post" id='remove_ingredient_form'>
-        <input type="button" id="remove_ingredient_button" value="Less Ingredients" class='btn btn-primary'>
+        <input type="button" id="remove_ingredient_button" value="Fewer Ingredients" class='btn btn-primary'>
       </form>
     </div>
   </div>
