--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -15,7 +15,7 @@
 
     <h1 class='new-recipe-title'>Create your recipe!</h1>
     <div id='new-recipe-form' class="row justify-content-center align-items-center">
-      <%= form_for @recipe, url: {action: "create"}, html: {class: "form-group"} do |f| %>
+      <%= form_for @recipe, url: {action: "create"}, html: {class: "form-group form-group-recipe"} do |f| %>
       <%= label_tag(:name, "Recipe title", class: 'new-recipe-label') %>
         <%= f.text_field :name, class: 'form-control' %>
         <%= label_tag(:description, "Recipe description", class: 'new-recipe-label') %>
@@ -31,7 +31,7 @@
     </div>
 
     <div id='ocr-upload-form' class="row justify-content-center align-items-center">
-      <%= form_tag("/ocr", method: "post", multipart: true, class: 'form-group') do %>
+      <%= form_tag("/ocr", method: "post", multipart: true, class: 'form-group form-group-recipe') do %>
       <p>Copying in a recipe? You can upload a picture here and we'll convert it into text so you can copy and paste those detailed descriptions rather than writing them out by hand!</p>
       <%= file_field_tag(:image, class: 'form-control upload-field') %>
       <%= submit_tag("Upload", class: 'btn btn-secondary') %>
