--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,6 +84,11 @@ body {
   bottom: 5%;
   transition: 400ms;
 }
+.fa-ban {
+  color: #fff;
+  font-size: 2.3em;
+  font-weight: bold;
+}
 
 .fa-heart {
   color: #fff;
@@ -247,8 +252,8 @@ body {
   background-repeat: no-repeat;
   background-size: contain, cover;
   border-radius: 30px;
-  width:100%;
-  height:100%;
+  width: 950px;
+  height:600px;
   filter: blur(10px);
   -webkit-filter: blur(10px);
   -webkit-border-radius: 30px;
@@ -265,7 +270,7 @@ body {
   top: 120px;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.2);
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(187, 187, 187, 0.4);
   overflow: scroll;
 }
   /* width */
