--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -9,59 +9,56 @@
 <h1>My Cookbook</h1>
 
 <div class="recipe-card-container">
-<% @recipes.each do |recipe| %>
-  <div id="recipe_<%= recipe.id %>" class="recipe">
+  <% @recipes.each do |recipe| %>
 
-    <div class="recipe-card">
-      <div class="recipe-card-header">
-            <% if recipe.image.attached? %>
-              <%= image_tag recipe.image, class: "recipe_image_index", :size => "400x350" %>
-            <% end %>
+    <div class="recipe-card-individual">
 
-            <% pre_like = recipe.likes.find { |like| like.user_id == current_user.id} %>
-            <% if pre_like %>
+      <div class="recipe-card">
+        <div class="recipe-card-header">
 
-              <%= link_to raw("<i class=\"far fa-heart\"></i>"), recipe_like_path(recipe, pre_like), method: :delete, class: "recipe-card-liked-button" %>
+              <% if recipe.image.attached? %>
+                <%= image_tag recipe.image, class: "recipe_image_index", :size => "400x350" %>
+              <% end %>
+
+                <% pre_favourite = recipe.favourites.find { |favourite| favourite.user_id == current_user.id} %>
+                <% if pre_favourite %>
+                  <%= link_to raw("<i class=\'fas fa-ban\'></i>"), recipe_favourite_path(recipe, pre_favourite), method: :delete, class: "recipe-card-liked-button" %>
+                <% else %>
+                  <%= link_to raw("<i class=\'fas fa-plus-circle\'></i>"), recipe_favourites_path(recipe), method: :post, class: "recipe-card-unliked-button" %>
+                <% end %>
+            </div>
+        </div>
+        <div class="recipe-card-title">
+            <h1 class="recipe-card-title-container">
+              <a><%= recipe.name %></a>
+            </h1>
+            <div class="recipe-card-icons">
+              <i class="fas fa-user"> <a href="/recipes/<%= User.find(recipe.user_id).id %>/filter"><%= User.find(recipe.user_id).name %></a> </i>
+              <i class="fas fa-clock"> <%= recipe.cooking_time %></i>
+              <i class="fas fa-utensils">  <%= recipe.serving %></i>
+            </div>
+            <% if recipe.likes.count == 1 %>
+              <p><%= recipe.likes_count %> Like </p>
             <% else %>
-              <%= link_to raw("<i class=\"fas fa-heart-broken\"></i>"), recipe_likes_path(recipe), method: :post, class: "recipe-card-unliked-button" %>
+              <p><%= recipe.likes_count %> Likes </p>
             <% end %>
-          </div>
+        <div class="recipe-card-description">
+          <p><%= recipe.description %></p>
+        </div>
+        </div>
+        <a href="/recipes/<%= recipe.id %>" class="recipe-card-cook-btn">Let's Cook!</a>
       </div>
-      <div class="recipe-card-title">
-          <h1 class="recipe-card-title-container">
-            <a><%= recipe.name %></a>
-          </h1>
-          <i class="fa fa-clock-o"> 15 Mins</i>
-          <i class="fa fa-users"> Serves 2</i>
-
-          <div class="recipe-card-rating">
-            <li>
-                <a href="#"><i class="fas fa-star"></i></a>
-                <a href="#"><i class="fas fa-star"></i></a>
-                <a href="#"><i class="fas fa-star"></i></a>
-                <a href="#"><i class="fas fa-star"></i></a>
-                <a href="#"><i class="far fa-star"></i></a>
-            </li>
-          </div>
-        <p class="recipe-card-description"><%= recipe.description %></p>
-      </div>
-      <% pre_favourite = recipe.favourites.find { |favourite| favourite.user_id == current_user.id} %>
-      <% if pre_favourite %>
-        <%= button_to 'Unfavourite', recipe_favourite_path(recipe, pre_favourite), method: :delete %>
-      <% else %>
-        <%= button_to 'Favourite', recipe_favourites_path(recipe), method: :post %>
-      <% end %>
-      <a href="/recipes/<%= recipe.id %>" class="recipe-card-cook-btn">Let's Cook!</a>
-    </div>
+  <% end %>
   </div>
-<% end %>
-</div>
 
 <div class="pagination_box">
-<div class="pagination_info">
-  <%= page_entries_info @recipes %>
-</div>
-<div class="pagination_links">
-  <%= will_paginate @recipes, :container => false, link_separator: ' - ' %>
-</div>
+
+  <div class="pagination_links">
+    <%= will_paginate @recipes, :container => false, link_separator: ' - ' %>
+  </div>
+
+  <div class="pagination_info">
+    <%= page_entries_info @recipes %>
+  </div>
+
 </div>
