--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -41,7 +41,7 @@
         <div class="recipe-show-icons-blowup">
           <i class="fas fa-clock"></i>
         </div>
-        <p id="recipe-show-icons-time">Cooking Time: <%= @recipe.cooking_time %><p>
+        <p id="recipe-show-icons-time">Time: <%= @recipe.cooking_time %><p>
           
         </div>
       <div class="recipe-show-icons-blocks">
