--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,7 +60,8 @@ body {
 .recipe-card-header {
   background: url("http://img.taste.com.au/UZVXAdo7/taste/2016/11/chinese-egg-noodle-and-vegetable-stir-fry-94186-1.jpeg");
   background-size: cover;
-  min-height: 350px;
+  height: 350px;
+  overflow: hidden;
 }
 
 .recipe-card-liked-button {
@@ -221,6 +222,7 @@ body {
   width: 70%;
   height: 600px;
   border-radius: 20px;
+  overflow: hidden;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
@@ -228,28 +230,23 @@ body {
 }
 
 .recipe-show-image {
+  margin: 0 auto;
   background-repeat: no-repeat;
   background-size: contain, cover;
-  border-radius: 30px;
-  width: 950px;
-  height:600px;
-  filter: blur(10px);
-  -webkit-filter: blur(10px);
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  -ms-border-radius: 30px;
-  -o-border-radius: 30px;
+  object-fit: cover;
+  height:100%;
+  width: 100%;
 }
 
 .recipe-show-body{
   position: absolute;
-  margin: 30px;
+  margin: 40px;
   height: 560px;
   width: 65%;
   top: 120px;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.2);
-  background-color: rgba(187, 187, 187, 0.4);
+  background-color: rgba(187, 187, 187, 0.7);
   overflow: scroll;
 }
   /* width */
@@ -417,7 +414,7 @@ body {
   background: none;
 }
 
-/*  Edit page stylng */ 
+/*  Edit page stylng */
 
 .edit-profile-form {
   width: 400px;
@@ -460,4 +457,8 @@ body {
   font-size: 16px;
   letter-spacing: 2px;
   margin-left: 10px;
+}
+
+.users-recipe-title {
+  margin-left: 90px;
 }
