--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,6 +39,65 @@
   </div>
 
   <div class="profile-right">
-  <h1>Recipes go here</h2>
+    <h2 class='users-recipe-title'><%= @user.name %>'s Recipes</h2>
+  <div class="recipe-card-container">
+    <% @recipes.each do |recipe| %>
+
+      <div class="recipe-card-individual">
+
+        <div class="recipe-card">
+          <div class="recipe-card-header">
+
+                <% if recipe.image.attached? %>
+                  <%= image_tag recipe.image, class: "recipe_image_index" %>
+                <% end %>
+
+                <% if logged_in? %>
+                  <% pre_like = recipe.likes.find { |like| like.user_id == current_user.id} %>
+
+                  <% if pre_like %>
+                    <%= link_to raw("<i class=\'fas fa-heart\'></i>"), recipe_like_path(recipe, pre_like), method: :delete, class: "recipe-card-liked-button" %>
+
+                  <% else %>
+                    <%= link_to raw("<i class=\'fas fa-plus\'></i>"), recipe_likes_path(recipe), method: :post, class: "recipe-card-unliked-button" %>
+
+                  <% end %>
+                <% end %>
+              </div>
+          </div>
+          <div class="recipe-card-title">
+              <h1 class="recipe-card-title-container">
+                <a><%= recipe.name %></a>
+              </h1>
+              <div class="recipe-card-icons">
+                <i class="fas fa-user"> <a href="/recipes/<%= User.find(recipe.user_id).id %>/filter"><%= User.find(recipe.user_id).name %></a> </i>
+                <i class="fas fa-clock"> <%= recipe.cooking_time %></i>
+                <i class="fas fa-utensils">  <%= recipe.serving %></i>
+              </div>
+              <% if recipe.likes.count == 1 %>
+                <p><%= recipe.likes_count %> Like </p>
+              <% else %>
+                <p><%= recipe.likes_count %> Likes </p>
+              <% end %>
+          <div class="recipe-card-description">
+            <p><%= recipe.description %></p>
+          </div>
+          </div>
+          <a href="/recipes/<%= recipe.id %>" class="recipe-card-cook-btn">Let's Cook!</a>
+        </div>
+    <% end %>
+    </div>
+
+  <div class="pagination_box">
+
+    <div class="pagination_links">
+      <%= will_paginate @recipes, :container => false, link_separator: ' - ' %>
+    </div>
+
+    <div class="pagination_info">
+      <%= page_entries_info @recipes %>
+    </div>
+
+  </div>
   </div>
 </div>
