FIX: Changed default recipe image to https

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,7 +58,7 @@ body {
 }
 
 .recipe-card-header {
-  background: url("http://img.taste.com.au/UZVXAdo7/taste/2016/11/chinese-egg-noodle-and-vegetable-stir-fry-94186-1.jpeg");
+  background: url("https://img.taste.com.au/UZVXAdo7/taste/2016/11/chinese-egg-noodle-and-vegetable-stir-fry-94186-1.jpeg");
   background-size: cover;
   height: 350px;
   overflow: hidden;
