--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -461,3 +461,23 @@ body {
   letter-spacing: 2px;
   margin-left: 10px;
 }
+
+#plus-serving {
+  font-size: 10px;
+  border-style: none;
+  background-color: rgba(255, 255, 255, 0);
+  position: absolute;
+  top: 315px;
+  margin-left: -15px;
+}
+
+
+#minus-serving {
+  border-style: none;
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
+  font-size: 25px;
+  position: absolute;
+  top: 310px;
+  margin-left: 60px;
+}
