--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -43,14 +43,26 @@
         </div>
         <p id="recipe-show-icons-time">Cooking Time: <%= @recipe.cooking_time %><p>
         </div>
+      
+
+
       <div class="recipe-show-icons-blocks">
+        <button type="button" id='plus-serving'>
+          <i class="fas fa-plus"></i>
+        </button>
+
         <div class="recipe-show-icons-blowup">
           <i class="fas fa-utensils"></i>
         </div>
         <p id="recipe-show-icons-serving"> Serves <span id='serving-num'><%= @recipe.serving %></span><p>
+        
+        <button type="button" id='minus-serving'>
+          <i class="fas fa-minus"></i>
+        </button>
       </div>
-      <button type="button" id='plus-serving'>+</button>
-      <button type="button" id='minus-serving'>-</button>
+
+  
+      
       <div class="recipe-show-icons-blocks">
         <div class="recipe-show-icons-blowup">
           <i class="fas fa-user-edit"></i>
